# opencv_cpp_tutorials

./: .gitignore  README.md
ch2/: CMakeLists.txt
ch2/src/: example2.cpp  imageRead.cpp  moving_around.cpp  videoRead.cpp
